syntax = "proto3";

package yandex.cloud.priv.k8s.v1.inner;

import "google/protobuf/empty.proto";
import "yandex/cloud/priv/k8s/v1/inner/common.proto";
import "yandex/cloud/priv/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/k8s/v1/inner;k8s";
option java_outer_classname = "PMKIRS";

service RevisionService {
  rpc SetComputeImages(SetComputeImagesRequest) returns (google.protobuf.Empty);
  rpc SetPCNGControllerImage(SetPCNGControllerImageRequest) returns (google.protobuf.Empty);
  rpc Withdraw(WithdrawRequest) returns (google.protobuf.Empty);

  rpc GetComputeImages(GetComputeImagesRequest) returns (ComputeImages);
  rpc IsValid(IsValidRequest) returns (IsValidResponse);
}

message SetComputeImagesRequest {
  Version version = 1;
  ComputeImages images = 2;
}

message ComputeImages {
  string master_image_id = 2 [(required) = true];
  string node_image_id = 3 [(required) = true];
  string gpu_node_image_id = 4 [(required) = true];
}

message SetPCNGControllerImageRequest {
  Version version = 1;
  string pcng_controller = 2 [(required) = true];
}

message GetComputeImagesRequest {
  Version version = 1;
}

message WithdrawRequest {
  Version version = 1;
  string description = 2;
}

message IsValidRequest {
  Version version = 1;
}

message IsValidResponse {
  bool is_valid = 1;
}
